# black_hole_MGA802hunters

./: .gitignore  LICENSE  README.md  __init__.py  app.py  main.py  pyproject.toml  rapport_final.md  requirements-dev.txt  requirements.txt  test_kepler22.py
astro_module/: __init__.py  anomaly_detector.py  anomaly_engine.py  classifier.py  data_handler.py  visualizer.py
astro_modules/: data_handler.py
build_html/doctrees/: anomaly_engine.doctree  data_handler.doctree  environment.pickle  index.doctree  main.doctree  modules.doctree  visualizer.doctree
build_html/html/: .buildinfo  anomaly_engine.html  data_handler.html  genindex.html  index.html  main.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  visualizer.html
build_html/html/_sources/: data_handler.rst.txt  index.rst.txt  visualizer.rst.txt
data/raw/: test_data.py
source/: anomaly_engine.rst  modules.rst
